Modo Adaptativo - Poc 3
Alterações de tamanhos, e isolamentos de components para arrumar envio para o GMAIL

--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
                   </table>
                   <!--heroimage-->
                   <!--$headers-title-->
-                  <table width="100%" height="0" cellpadding="0" cellspacing="0" border="0" bgcolor="ffffff">
+                  <table width="600" height="0" cellpadding="0" cellspacing="0" border="0" bgcolor="ffffff">
                     <tr>
-                      <td align="center" valign="top">
+                      <td align="center" valign="top" width="568">
                         <table width="568" cellpadding="0" cellspacing="0" border="0" class="container" bgcolor="ffffff">
                           <tr>
                             <td align="left" valign="top" style="border-bottom: 1px solid #c3c7ca;">
@@ -165,7 +165,7 @@
                   <!--contentblock_hero-1_column-->
                   <table width="600" height="489" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
                     <tr>
-                      <td align="center" valign="middle">
+                      <td align="center" valign="middle" width="568" height="465">
                         <table width="568" height="465" cellpadding="0" cellspacing="0" border="0" class="container">
                           <tr>
                             <td width="568" height="328" align="center" valign="top">
@@ -203,7 +203,7 @@
                 </td>
                 <td width="323" height="auto" align="left" valign="top">
                   <div style="width:323px; height:89px; font-size:18px;font-family:Open Sans,arial,helvetica,sans-serif;color:white;font-weight:500; color:#5D5D5D;">Planejar a aposentadoria é essencial para garantir conforto no futuro. Veja as melhores dicas para se preparar.</div>
-                  <img src="image/button_tertiary.png" width="136" height="40" alt="leia">
+                  <div><img src="image/button_tertiary.png" width="136" height="40" alt="leia"></div>
                 </td>
               </tr>
               <tr></tr>
