Modo Adaptativo - Poc 4
- Alterações na Estrutura do content block hero para GMAIL

--- a/index.html
+++ b/index.html
@@ -163,99 +163,96 @@
                   </table>
                   <!--$headers-title-->
                   <!--contentblock_hero-1_column-->
-                  <table width="600" height="489" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
+                  <table width="600" height="auto" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
                     <tr>
-                      <td align="center" valign="middle" width="568" height="465">
-                        <table width="568" height="465" cellpadding="0" cellspacing="0" border="0" class="container">
+                      <td valign="middle" align="center">
+                        <table width="568" height="489" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
                           <tr>
-                            <td width="568" height="328" align="center" valign="top">
-                              <img src="image/heroimage_16-9.png" width="568" height="320" alt="R7">
+                            <td>
+                              <img src="image/heroimage_16-9.png" width="568" height="320" alt="R7" border="0" display='block' style="display: block;">
                             </td>
                           </tr>
-                    </tr>
-                    <tr>
-                      <td width="568" align="left" valign="top">
-                        <div style="width:568px; font-size:18px;font-family:Open Sans,arial,helvetica,sans-serif;color:white;font-weight:500; color:#5D5D5D;">A nova etapa do Desenrola Brasil já começou. A negociação de contas atrasadas de luz, água, varejo e educação, entre outras, é feita por meio da plataforma oficial do programa.</div>
+                          <tr>
+                            <td>
+                              <p style="font-size:18px;font-family:Open Sans,arial,helvetica,sans-serif;color:white;font-weight:500; color:#5D5D5D;">A nova etapa do Desenrola Brasil já começou. A negociação de contas atrasadas de luz, água, varejo e educação, entre outras, é feita por meio da plataforma oficial do programa.</p>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img src="image/button_primary.png" width="136" height="40" alt="leia" border="0" display='block' style="display: block;">
+                            </td>
+                          </tr>
+                        </table>
                       </td>
                     </tr>
-                 
-              </tr>
-              <tr>
-                <td width="568" align="left" valign="middle">
-                  <img src="image/button_primary.png" width="136" height="40" alt="leia">
-                </td>
-              </tr>
-            </table>
-            </a>
-          </td>
-        </tr>
-      
-      </table>
-      <!--contentblock_hero-1_column-->
-      <!--contentblock-1_column-->
-      <table width="600" height="153" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
-        <tr>
-          <td align="center" valign="middle">
-            <table width="568" heigth="153" cellpadding="0" cellspacing="0" border="0" class="container">
-              <tr>
-                <td width="237" height="auto" align="left" valign="middle">
-                  <img src="image/cardimage.png" width="229" height="auto" alt="R7">
-                </td>
-                <td width="323" height="auto" align="left" valign="top">
-                  <div style="width:323px; height:89px; font-size:18px;font-family:Open Sans,arial,helvetica,sans-serif;color:white;font-weight:500; color:#5D5D5D;">Planejar a aposentadoria é essencial para garantir conforto no futuro. Veja as melhores dicas para se preparar.</div>
-                  <div><img src="image/button_tertiary.png" width="136" height="40" alt="leia"></div>
+                  </table>
+                  <!--contentblock_hero-1_column-->
+                  <!--contentblock-1_column-->
+                  <table width="600" height="153" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
+                    <tr>
+                      <td align="center" valign="middle">
+                        <table width="568" heigth="153" cellpadding="0" cellspacing="0" border="0" class="container">
+                          <tr>
+                            <td width="237" height="auto" align="left" valign="middle">
+                              <img src="image/cardimage.png" width="229" height="auto" alt="R7">
+                            </td>
+                            <td width="323" height="auto" align="left" valign="top">
+                              <div style="width:323px; height:89px; font-size:18px;font-family:Open Sans,arial,helvetica,sans-serif;color:white;font-weight:500; color:#5D5D5D;">Planejar a aposentadoria é essencial para garantir conforto no futuro. Veja as melhores dicas para se preparar.</div>
+                              <div>
+                                <img src="image/button_tertiary.png" width="136" height="40" alt="leia">
+                              </div>
+                            </td>
+                          </tr>
+                          <tr></tr>
+                    </tr>
+                    <tr></tr>
+                  </table>
+                  </a>
                 </td>
               </tr>
               <tr></tr>
-        </tr>
-        <tr></tr>
-      </table>
-      </a>
-      </td>
-      </tr>
-      <tr></tr>
-      </table>
-      <!--contentblock-1_column-->
-      <!--redesocial-->
-      <table width="600" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
-        <tr>
-          <td height="10" style="font-size:10px; line-height:10px;">
-            <p>&nbsp;</p>
-          </td>
-        </tr>
-        <tr>
-          <td align="center" valign="top">
-        <tr>
-          <td align="center" valign="top">
-            <table width="300" cellpadding="0" cellspacing="0" border="0" class="container">
-              <tr>
-                <center>
-                  <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
-                    <a href="#" target="_blank">
-                      <img src="image/$icon-facebook.png" width="40" height="auto">
-                    </a>
-                  </td>
-                  <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
-                    <a href="#" target="_blank">
-                      <img src="image/$icon-instagram.png" width="40" height="auto">
-                    </a>
-                  </td>
-                  <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
-                    <a href="#" target="_blank">
-                      <img src="image/$icon-x_twitter.png" width="40" height="auto">
-                    </a>
-                  </td>
-                  <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
-                    <a href="#" target="_blank">
-                      <img src="image/$icon-linkedin.png" width="40" height="auto">
-                    </a>
-                  </td>
-                </center>
-              </tr>
             </table>
+            <!--contentblock-1_column-->
+            <!--redesocial-->
+            <table width="600" cellpadding="0" cellspacing="0" border="0" bgcolor="#FFFFFF">
+              <tr>
+                <td height="10" style="font-size:10px; line-height:10px;">
+                  <p>&nbsp;</p>
+                </td>
+              </tr>
+              <tr>
+                <td align="center" valign="top">
+              <tr>
+                <td align="center" valign="top">
+                  <table width="300" cellpadding="0" cellspacing="0" border="0" class="container">
+                    <tr>
+                      <center>
+                        <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
+                          <a href="#" target="_blank">
+                            <img src="image/$icon-facebook.png" width="40" height="auto">
+                          </a>
+                        </td>
+                        <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
+                          <a href="#" target="_blank">
+                            <img src="image/$icon-instagram.png" width="40" height="auto">
+                          </a>
+                        </td>
+                        <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
+                          <a href="#" target="_blank">
+                            <img src="image/$icon-x_twitter.png" width="40" height="auto">
+                          </a>
+                        </td>
+                        <td width="100" align="center" valign="middle" style="border: 10px solid transparent;">
+                          <a href="#" target="_blank">
+                            <img src="image/$icon-linkedin.png" width="40" height="auto">
+                          </a>
+                        </td>
+                      </center>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
           </td>
-        </tr>
-        </td>
         </tr>
         <tr>
           <td height="10" style="font-size:10px; line-height:10px;">
